--- a/LicenseGenerator/MainWindow.xaml
+++ b/LicenseGenerator/MainWindow.xaml
@@ -55,7 +55,7 @@
                 <TextBox Text="{Binding MainDir}" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>
                 <Button Content="Select" Click="BtnSelect_Click" Grid.Column="2" Margin="5"/>
                 <TextBlock Text="CPU SN" Grid.Row="1" HorizontalAlignment="Left" Margin="5"/>
-                <TextBox Text="{Binding CpuSN}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>
+                <TextBox Text="{Binding CpuSN, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>
                 <Button Content="Generate" Click="BtnGenerate_Click" Grid.Row="1" Grid.Column="2" Margin="5"/>
             </Grid>
         </Border>
@@ -109,7 +109,6 @@
             <ListView.View>
                 <GridView>
                     <GridView.Columns>
-                        <!--<GridViewColumn Header="File Name" DisplayMemberBinding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListViewItem}}, Converter={StaticResource lsIdCvtr}}"/>-->
                         <GridViewColumn Header="File Name" Width="Auto">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
@@ -129,33 +128,11 @@
             </ListView.View>
             <ListView.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Delete" Click="MiDelete_Click" Visibility="{Binding ScriptEditVis}"/>
+                    <MenuItem Header="Delete" Click="MiDelete_Click"/>
+                    <MenuItem Header="Refresh" Click="MiRefresh_Click"/>
                 </ContextMenu>
             </ListView.ContextMenu>
         </ListView>
-
-        <!--<Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="70"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            --><!--<GroupBox Header="Input">
-            <TextBox Text="{Binding InputMsg}" TextWrapping="WrapWithOverflow"/>
-        </GroupBox>
-        <GroupBox Header="Output" Grid.Column="1">
-            <TextBox Text="{Binding OutputMsg}" TextWrapping="WrapWithOverflow"/>
-        </GroupBox>--><!--
-            <StackPanel Grid.Column="2" Grid.Row="1">
-                
-                --><!--<Button Content="Encrypt" Click="BtnEncrypt_Click"/>
-            <Button Content="Decrypt" Click="BtnDecrypt_Click"/>--><!--
-            </StackPanel>
-        </Grid>-->
     </DockPanel>
     
 </Window>
