--- a/LicenseGenerator/MainWindow.xaml
+++ b/LicenseGenerator/MainWindow.xaml
@@ -56,8 +56,10 @@
                 <TextBox Text="{Binding MainDir}" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>
                 <Button Content="Select" Click="BtnSelect_Click" Grid.Column="2" Margin="5"/>
                 <TextBlock Text="PC SN" Grid.Row="1" HorizontalAlignment="Left" Margin="5"/>
-                <TextBox Text="{Binding MachineSN, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>
-                <Button Content="Generate" Click="BtnGenerate_Click" Grid.Row="1" Grid.Column="2" Margin="5,5,5,0" Height="23" VerticalAlignment="Top"/>
+                <ComboBox ItemsSource="{Binding MachineSNs}" SelectedIndex="0" SelectedItem="{Binding MachineSN}" IsEditable="True" Grid.Row="1" Grid.Column="1" Margin="5">
+                </ComboBox>
+                <!--<TextBox Text="{Binding MachineSN, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>-->
+                <Button Content="Generate" Click="BtnGenerate_Click" Grid.Row="1" Grid.Column="2" Margin="5,5,5,5"/>
             </Grid>
         </Border>
         <GroupBox Header="Device" DockPanel.Dock="Top" BorderThickness="2" BorderBrush="LightGray" Margin="5">
@@ -153,5 +155,5 @@
             </ListView.ContextMenu>
         </ListView>
     </DockPanel>
-    
+
 </Window>
