--- a/LicenseGenerator/MainWindow.xaml
+++ b/LicenseGenerator/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:LicenseGenerator"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
-        Title="License Generator" Height="600" Width="1000">
+        Title="License Generator" Height="650" Width="1000">
     <Window.Resources>
         <ResourceDictionary>
             <Style TargetType="GroupBox">
@@ -40,77 +40,69 @@
         </ResourceDictionary>
     </Window.Resources>
     <DockPanel>
-
-        <Border BorderThickness="2" BorderBrush="LightGray" DockPanel.Dock="Top" Margin="5">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="4*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="1*"/>
-                    <RowDefinition Height="1*"/>
-                </Grid.RowDefinitions>
-                <TextBlock Text="Directory" HorizontalAlignment="Left" Margin="5"/>
-                <TextBox Text="{Binding MainDir}" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>
-                <Button Content="Select" Click="BtnSelect_Click" Grid.Column="2" Margin="5"/>
-                <TextBlock Text="PC SN" Grid.Row="1" HorizontalAlignment="Left" Margin="5"/>
-                <ComboBox ItemsSource="{Binding MachineSNs}" SelectedIndex="0" SelectedItem="{Binding MachineSN}" IsEditable="True" Grid.Row="1" Grid.Column="1" Margin="5">
-                </ComboBox>
-                <!--<TextBox Text="{Binding MachineSN, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>-->
-                <Button Content="Generate" Click="BtnGenerate_Click" Grid.Row="1" Grid.Column="2" Margin="5,5,5,5"/>
-            </Grid>
-        </Border>
-        <GroupBox Header="Device" DockPanel.Dock="Top" BorderThickness="2" BorderBrush="LightGray" Margin="5">
-            <Grid Margin="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="150"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Type"/>
-                <TextBlock Text="Model" Grid.Column="1"/>
-                <TextBlock Text="Serial Number" Grid.Column="2"/>
-                <ComboBox Text="{Binding DeviceType}" Grid.Row="1" VerticalAlignment="Center" Margin="5">
-                    <ComboBoxItem Content="Robot"/>
-                    <ComboBoxItem Content="Scanner"/>
-                </ComboBox>
-                <TextBox Text="{Binding DeviceModel}" Grid.Column="1" Grid.Row="1"/>
-                <TextBox Text="{Binding DeviceSN}" Grid.Column="2" Grid.Row="1"/>
-                <Button Content="Generate" Click="BtnGenDevice_Click" Grid.RowSpan="2" Grid.Column="3" Margin="5"/>
-            </Grid>
-        </GroupBox>
-        <GroupBox Header="Feature" DockPanel.Dock="Top" BorderThickness="2" BorderBrush="LightGray" Margin="5">
-            <Grid Margin="5">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="150"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Model"/>
-                <TextBlock Text="Serial Number" Grid.Column="1"/>
-                <ComboBox Text="{Binding FeatureModel}" IsEditable="True" Grid.Row="1" VerticalAlignment="Center" Margin="5">
-                    <ComboBoxItem Content="tcp"/>
-                    <ComboBoxItem Content="atcpc"/>
-                </ComboBox>
-                <TextBox Text="{Binding FeatureSN}" Grid.Column="1" Grid.Row="1"/>
-                <Button Content="Generate" Click="BtnGenFeature_Click" Grid.RowSpan="2" Grid.Column="3" Margin="5"/>
-            </Grid>
-        </GroupBox>
-        <GroupBox Header="Expiration Date" DockPanel.Dock="Right">
-            <Calendar SelectedDate="{Binding ExpirationDate}" DisplayDate="{Binding ExpirationDate}" Width="300" HorizontalAlignment="Center" VerticalAlignment="Center"
-                          SelectionMode="SingleDate" Grid.Row="2" Grid.Column="1" Margin="10"/>
-        </GroupBox>
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Border BorderThickness="2" BorderBrush="LightGray" Margin="5">
+                <Grid Margin="5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="4*"/>
+                        <ColumnDefinition Width="1*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*"/>
+                        <RowDefinition Height="1*"/>
+                    </Grid.RowDefinitions>
+                    <TextBlock Text="Directory" HorizontalAlignment="Left" Margin="5"/>
+                    <TextBox Text="{Binding MainDir}" TextWrapping="Wrap" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>
+                    <Button Content="Select" Click="BtnSelect_Click" Grid.Column="2" Margin="5"/>
+                    <TextBlock Text="PC SN" Grid.Row="1" HorizontalAlignment="Left" Margin="5"/>
+                    <ComboBox ItemsSource="{Binding MachineSNs}" SelectedIndex="0" SelectedItem="{Binding MachineSN}" IsEditable="True" Grid.Row="1" Grid.Column="1" Margin="5">
+                    </ComboBox>
+                    <!--<TextBox Text="{Binding MachineSN, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>-->
+                    <Button Content="Generate" Click="BtnGenerate_Click" Grid.Row="1" Grid.Column="2" Margin="5,5,5,5"/>
+                </Grid>
+            </Border>
+            <GroupBox Header="License Generation" Grid.Row="1" 
+                  BorderThickness="2" BorderBrush="LightGray" Margin="5">
+                <Grid Margin="5">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="*"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="1*"/>
+                        <ColumnDefinition Width="2*"/>
+                        <ColumnDefinition Width="150"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBlock Text="Type"/>
+                    <TextBlock Text="Model" Grid.Column="1"/>
+                    <TextBlock Text="Serial Number" Grid.Column="2"/>
+                    <ComboBox ItemsSource="{Binding TypeNames}" SelectedItem="{Binding TypeName}" 
+                          IsEditable="True" Grid.Row="1" VerticalAlignment="Center" Margin="5"/>
+                    <TextBox Text="{Binding ModelName}" Grid.Column="1" Grid.Row="1"/>
+                    <TextBox Text="{Binding SN}" Grid.Column="2" Grid.Row="1"/>
+                    <Button Content="Generate" Click="BtnGenLicense_Click" Grid.RowSpan="2" Grid.Column="3" Margin="5"/>
+                </Grid>
+            </GroupBox>
+            <GroupBox Header="Expiration Date" Grid.Column="1" Grid.RowSpan="2">
+                <Viewbox Margin="10">
+                    <Calendar SelectedDate="{Binding ExpirationDate}" DisplayDate="{Binding ExpirationDate}" SelectionMode="SingleDate"/>
+                </Viewbox>
+            </GroupBox>
+        </Grid>
+        
+        
+        
+        
         <ListView x:Name="fileView" ItemsSource="{Binding LicenseFiles}" SelectionChanged="LvSelectionChange"
                   SelectedIndex="{Binding FileIndex}" SelectionMode="Single" Margin="5" FontSize="16">
             <ListView.View>
