--- a/LicenseGenerator/MainWindow.xaml
+++ b/LicenseGenerator/MainWindow.xaml
@@ -64,7 +64,7 @@
                     <TextBox Text="{Binding MainDir}" TextWrapping="Wrap" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>
                     <Button Content="Select" Click="BtnSelect_Click" Grid.Column="2" Margin="5"/>
                     <TextBlock Text="PC SN" Grid.Row="1" HorizontalAlignment="Left" Margin="5"/>
-                    <ComboBox ItemsSource="{Binding MachineSNs}" SelectedIndex="0" SelectedItem="{Binding MachineSN}" IsEditable="True" Grid.Row="1" Grid.Column="1" Margin="5">
+                    <ComboBox ItemsSource="{Binding MachineSNs}" SelectedItem="{Binding MachineSN}" IsEditable="True" Grid.Row="1" Grid.Column="1" Margin="5">
                     </ComboBox>
                     <!--<TextBox Text="{Binding MachineSN, Mode=TwoWay}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Stretch" Margin="5"/>-->
                     <Button Content="Generate" Click="BtnGenerate_Click" Grid.Row="1" Grid.Column="2" Margin="5,5,5,5"/>
