--- a/LicenseGenerator/MainWindow.xaml
+++ b/LicenseGenerator/MainWindow.xaml
@@ -86,7 +86,7 @@
                     <TextBlock Text="Type"/>
                     <TextBlock Text="Model" Grid.Column="1"/>
                     <TextBlock Text="Serial Number" Grid.Column="2"/>
-                    <ComboBox ItemsSource="{Binding TypeNames}" SelectedItem="{Binding TypeName}" 
+                    <ComboBox ItemsSource="{Binding TypeNames}" Text="{Binding TypeName, UpdateSourceTrigger=PropertyChanged}" SelectedItem="{Binding TypeName}" 
                           IsEditable="True" Grid.Row="1" VerticalAlignment="Center" Margin="5"/>
                     <TextBox Text="{Binding ModelName}" Grid.Column="1" Grid.Row="1"/>
                     <TextBox Text="{Binding SN}" Grid.Column="2" Grid.Row="1"/>
